css overflow for filter fixed

--- a/src/Filter/filterstyles/filterstyles.css
+++ b/src/Filter/filterstyles/filterstyles.css
@@ -52,10 +52,9 @@
 }
 .filter-option-cx {
   background-color: rgba(10, 8, 8, 0.3);
-  position: absolute;
+  position: fixed;
   top: 0px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  /* padding: 10px; */
   height: 100vh;
   width: 100%;
   left: 0px;
